# foo_param

./: LICENSE  README.md  pyproject.toml
docs/: foo_param_doc.md
examples/: example.py
foo_param/: calculations.py  utilities.py
tests/: test_calculations.py  test_utilities.py
