[project]
name = "foo_param"
version = "0.0.1"
authors = [
  { name="Hui Zhang", email="61168589+huizry@users.noreply.github.com" },
]
description = "A software package that calculates the complex (yet entirely fictitious) Foo et al. parameterization"
readme = "README.md"
requires-python = ">=3.12.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/huizry/foo_param"
Issues = "https://github.com/huizry/foo_param/issues"